Bug 256986 - Fix trace points for UI-side scrolling
Summary: Fix trace points for UI-side scrolling
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Simon Fraser (smfr)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-05-18 14:46 PDT by Simon Fraser (smfr)
Modified: 2023-05-18 18:59 PDT (History)
3 users (show)

See Also:


Attachments
Patch (1.93 KB, patch)
2023-05-18 14:47 PDT, Simon Fraser (smfr)
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Fraser (smfr) 2023-05-18 14:46:40 PDT
Fix trace points for UI-side scrolling
Comment 1 Simon Fraser (smfr) 2023-05-18 14:47:50 PDT
Created attachment 466409 [details]
Patch
Comment 2 Ben Nham 2023-05-18 14:49:30 PDT
Comment on attachment 466409 [details]
Patch

LGTM
Comment 3 Ben Nham 2023-05-18 14:49:38 PDT
LGTM
Comment 4 EWS 2023-05-18 18:58:43 PDT
Committed 264227@main (61c6614b85c4): <https://commits.webkit.org/264227@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 466409 [details].
Comment 5 Radar WebKit Bug Importer 2023-05-18 18:59:25 PDT
<rdar://problem/109543905>