Fix trace points for UI-side scrolling https://bugs.webkit.org/show_bug.cgi?id=256986

Reviewed by Ben Nham.

Emit the same tracing points for UI-side scrolling that we use for web process scrolling.

* Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteLayerTreeEventDispatcher.cpp:
(WebKit::RemoteLayerTreeEventDispatcher::didRefreshDisplay):
(WebKit::RemoteLayerTreeEventDispatcher::mainThreadDisplayDidRefresh):

Canonical link: https://commits.webkit.org/264227@main